--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,8 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-.dark {
-  font-size: 5555555px
-}
 
 .font-title{
   color:black
+}
+
+.copyrightFooter{
+  background-color: rgba(0, 0, 0, 0.2);
 }
